<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/test1"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/nav_person_info"/>
        <item
            android:id="@+id/test2"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/nav_change_password"/>
        <item
            android:id="@+id/test3"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/nav_child_info"/>

        <item
            android:id="@+id/test4"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/nav_open_live"/>
        <item
            android:id="@+id/test5"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/nav_login_out"/>
    </group>

</menu>