<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <com.hwt.babybag.view.CircleImageVIew
            android:id="@+id/child_header_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:corner_radius="10dp"
            android:src="@drawable/icon_zhangweitu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tag_shape"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="个性标签"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/child_name_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/child_name"/>
            <TextView
                android:id="@+id/child_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/child_name_tag"
                android:text="小小"/>
            <Button
                android:id="@+id/child_change"
                android:layout_alignParentRight="true"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/child_change_shape"
                android:text="@string/child_change"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/child_age_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/child_age"/>
            <TextView
                android:id="@+id/child_age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/child_age_tag"
                android:text="5 岁"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/child_class_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/child_class"/>
            <TextView
                android:id="@+id/child_class_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/child_class_tag"
                android:text="某某某幼儿园小班101"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/child_introduce_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/child_introduce"/>
            <TextView
                android:id="@+id/child_introduce_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/child_introduce_tag"
                android:text="可爱，开朗，活泼的孩子"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

